# blz4

./: LICENSE  README.md  azure-pipelines.yml  blz4.c  depack.c  lz4.c  lz4.h  lz4_btparse.h  lz4_depack.c  lz4_leparse.h  lz4_ssparse.h  meson.build
.github/workflows/: meson-ci-workflow.yaml
